--- a/002.html
+++ b/002.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">内蒙古自治区</span>：顺源达建材---G110---百彦花收费站---G6京藏高速---G65包茂高速---蒙陕界<br><hr><span id="pro">陕西省</span>:陕蒙界---G65包茂高速---榆林北收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">内蒙古自治区</span>：顺源达建材---G110---包钢收费站---G6京藏高速---G65包茂高速---蒙陕界<br><hr><span id="pro">陕西省</span>:陕蒙界---G65包茂高速---榆林北收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -96,7 +96,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">货物信息</li> <!-- 货物信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">铲车</div></li>
+                    <div class="detail-value " id="cargoInfo">翻斗车一个</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物重量：</div>
                     <div class="detail-value " id="cargoWeight">38.00吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
