--- a/006.html
+++ b/006.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广西壮族自治区</span>:顺源达建材---S323---倒水收费站---G65包茂高速---S4001梧州绕城高速---S8广佛肇高速---桂粤界；<br><hr><span id="pro">广东省</span>:粤桂界---粤桂界---S8广佛肇高速---封开东收费站  <br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广西壮族自治区</span>:顺源达建材---G207---梧州收费站---梧州支线高速---G65包茂高速---S4001梧州绕城高速---S8广佛肇高速---桂粤界；<br><hr><span id="pro">广东省</span>:粤桂界---粤桂界---S8广佛肇高速---封开东收费站  <br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">沙河市顺诚运输有限公司</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
