--- a/005.html
+++ b/005.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">河北省</span>:邵家庄村--G234--顺平北收费站--G5京昆高速--G20青银高速--G4京港澳高速--冀豫界；<br><hr><span id="pro">河南省</span>: 豫冀界--G4京港澳高速--安阳北收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">河北省</span>:邵家庄村--G234--顺高连接线--顺平北收费站--G5京昆高速--G20青银高速--G4京港澳高速--冀豫界；<br><hr><span id="pro">河南省</span>: 豫冀界--G4京港澳高速--安阳北收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
