--- a/002.html
+++ b/002.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>: 北顺安停车场--G105--碧江收费站--S43广珠西线高速---G1508广州绕城高速--G15沈海高速--G2518深岑高速---粤桂界；<br><hr><span id="pro">广西壮族自治区</span>:桂粤界--G2518深岑高速--深岑东收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>: 北顺安停车场--G105--骏新路--钟韵路--金山大道西--番禺大道北--番禺大道南--南沙大道--鱼窝头收费站--S43广珠西线高速---G1508广州绕城高速--G15沈海高速--G2518深岑高速---粤桂界；<br><hr><span id="pro">广西壮族自治区</span>:桂粤界--G2518深岑高速--深岑东收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
