--- a/004.html
+++ b/004.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>: 广东省: 广州运成土石方工程有限公司--番禺大道--金山大道--朱山岗收费站--S5广台高速--G0425广澳高速--G4京港澳高速--G0423乐广高速--G4京港澳高速--粤湘界；<br><hr><span id="pro">湖南省</span>: 湘粤界--G4京港澳高速--宜章收费站 <br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>: 广州运成土石方工程有限公司--番禺大道--金山大道--朱山岗收费站--S5广台高速--G0425广澳高速--G4京港澳高速--G0423乐广高速--G4京港澳高速--粤湘界；<br><hr><span id="pro">湖南省</span>: 湘粤界--G4京港澳高速--宜章收费站 <br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
