--- a/002.html
+++ b/002.html
@@ -75,15 +75,15 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">A1300002023112401363</div></li>
+                    <div class="detail-value " id="reqNo">A4400002023112304769</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">广东省，广西壮族自治区</div></li>
+				<div class="detail-value " id="passDists">广西壮族自治区，广东省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2023年11月24日18时15分至 2023年11月30日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2023年11月24日18时55分至 2023年11月30日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>: 英明工业园--G228--X680--横山收费站--S42化廉高速--G75兰海高速--粤桂界<br><hr><span id="pro">广西壮族自治区</span>:桂粤界--G75兰海高速--山口收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广西壮族自治区</span>: 防城北收费站--G7511钦东高速--G75兰海高速--桂粤界；<br><hr><span id="pro">广东省</span>:粤桂界--G75兰海高速--仰塘收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -96,7 +96,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">货物信息</li> <!-- 货物信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">挖机主机</div></li>
+                    <div class="detail-value " id="cargoInfo">挖机</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物重量：</div>
                     <div class="detail-value " id="cargoWeight">48.00吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
@@ -131,7 +131,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">其他信息</li> <!-- 其他信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
-				<div class="detail-value " id="passOpinion"><br>广东省：<br>交通部门意见:同意通行。 <br>公安部门意见:同意通行。<br><hr>广西壮族自治区：<br>交通部门意见:同意通行。<br>公安部门意见:暂无！<br><hr></div></li>                
+				<div class="detail-value " id="passOpinion"><br>广西壮族自治区：<br>交通部门意见:同意通行。 <br>公安部门意见:同意通行。<br><hr>广东省：<br>交通部门意见:同意通行。<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
                 <li class="ui-li-static ui-body-inherit ui-last-child"><div class="detail-name-blod">运输计划：</div>
