--- a/006.html
+++ b/006.html
@@ -75,15 +75,15 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">A3500002023122600045</div></li>
+                    <div class="detail-value " id="reqNo">A3500002023122800045</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">福建省，江西省</div></li>
+				<div class="detail-value " id="passDists">广东省，广西壮族自治区</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2023年12月26日14时22分至 2024年01月12日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2023年12月29日19时22分至 2024年01月12日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">福建省</span>:政和驿站--政和立交桥--政和收费站--G1514宁上高速--松柏枢纽--G3京台高速--兴田枢纽--G1514宁上高速--闽赣界<br><hr><span id="pro">江西省</span>: 赣闽界--G1514宁上高速--铅山南收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:星子医院--S346--星子收费站--G0421许广高速--G55二广高速--鹤塘立交--G78汕昆高速--岗坪东立交--S59怀郁高速--G80广昆高速--粤桂界<br><hr><span id="pro">广西壮族自治区</span>: 桂粤界--G80广昆高速--G65包茂高速--G80广昆高速--S1701玉林绕城高速--G80广昆高速--玉林收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -131,7 +131,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">其他信息</li> <!-- 其他信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
-				<div class="detail-value " id="passOpinion"><br>福建省：<br>交通部门意见:同意通行！ <br>公安部门意见:同意通行！<br><hr>江西省：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
+				<div class="detail-value " id="passOpinion"><br>广东省：<br>交通部门意见:同意通行！ <br>公安部门意见:同意通行！<br><hr>广西壮族自治区：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
                 <li class="ui-li-static ui-body-inherit ui-last-child"><div class="detail-name-blod">运输计划：</div>
