--- a/004.html
+++ b/004.html
@@ -75,15 +75,15 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">A4400002023122700342</div></li>
+                    <div class="detail-value " id="reqNo">A4400002024010100342</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">广东省，广西壮族自治区</div></li>
+				<div class="detail-value " id="passDists">广东省，江西省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2023年12月28日10时59分至 2023年12月31日 23时59分</div></li>
+                    <div class="detail-value " id="passDate">2024年01月02日17时59分至 2024年01月09日 23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>: 高士工业园--凤塘大道--国际会展中心收费站--S3广深沿江高速--沙田立交--S6广龙高速--东涌立交--G1508广州绕城高速--G15沈海高速--大岗立交--G9411莞佛高速--谭塱立交--G94珠三角环线高速--富佛立交--G80广昆高速--粤桂界<br><hr><span id="pro">广西壮族自治区</span>: 桂粤界--G80广昆高速--G65包茂高速--梧州收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>: 京鸿（深圳）科技工业园--象山大道--日升路--S31龙大高速--福龙路--香蜜湖路--滨河大道--皇岗路--皇岗收费站--G4京港澳高速--S301南坪快速路--S301南平快速--龙景立交--S29清平高速--秀峰立交--G15沈海高速--排榜立交--G0422武深高速--会前互通--G45大广高速--粤赣界<br><hr><span id="pro">江西省</span>: 赣粤界--G45大广高速--全南收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -96,7 +96,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">货物信息</li> <!-- 货物信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">挖机</div></li>
+                    <div class="detail-value " id="cargoInfo">刀架</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物重量：</div>
                     <div class="detail-value " id="cargoWeight">43.00吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
@@ -131,7 +131,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">其他信息</li> <!-- 其他信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
-				<div class="detail-value " id="passOpinion"><br>广东省：<br>交通部门意见:同意通行。 <br>公安部门意见:同意通行。<br><hr>广西壮族自治区：<br>交通部门意见:同意通行。<br>公安部门意见:暂无！<br><hr></div></li>                
+				<div class="detail-value " id="passOpinion"><br>广东省：<br>交通部门意见:同意通行。 <br>公安部门意见:同意通行。<br><hr>江西省：<br>交通部门意见:同意通行。<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
                 <li class="ui-li-static ui-body-inherit ui-last-child"><div class="detail-name-blod">运输计划：</div>
